fix: adjust BillForm header alignment and styling for improved layout

--- a/frontend/src/components/Bill.css
+++ b/frontend/src/components/Bill.css
@@ -8,7 +8,12 @@ body {
     text-align: center;
     margin-bottom: 25px;
     color: #333;
-    margin-left: 270px;
+    margin-left: 480px;
+    margin-top: 30px;
+  }
+
+  h4{
+    font-weight: 10px;
   }
   
   .invoice-form form {
